--- a/project/app/templates/categoria/edit.html.twig
+++ b/project/app/templates/categoria/edit.html.twig
@@ -3,6 +3,12 @@
 {% block title %}Edit Categoria{% endblock %}
 
 {% block body %}
+<div class="container">
+
+    <div class="row">
+        <img src="{{ asset('banner/BlueShop.png') }}" alt="" >
+    </div>
+
     <h1>Edit Categoria</h1>
 
     {{ include('categoria/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +16,5 @@
     <a href="{{ path('app_categoria_index') }}">back to list</a>
 
     {{ include('categoria/_delete_form.html.twig') }}
+</div>
 {% endblock %}
