--- a/project/app/templates/categoria/new.html.twig
+++ b/project/app/templates/categoria/new.html.twig
@@ -3,9 +3,18 @@
 {% block title %}New Categoria{% endblock %}
 
 {% block body %}
-    <h1>Create new Categoria</h1>
+
+<div class="container">
+
+    <div class="row">
+        <img src="{{ asset('banner/BlueShop.png') }}" alt="" >
+    </div>
+
+    <h1>Criar nova categoria</h1>
 
     {{ include('categoria/_form.html.twig') }}
 
     <a href="{{ path('app_categoria_index') }}">back to list</a>
+
+</div>
 {% endblock %}
