--- a/project/app/templates/categoria/show.html.twig
+++ b/project/app/templates/categoria/show.html.twig
@@ -3,6 +3,13 @@
 {% block title %}Categoria{% endblock %}
 
 {% block body %}
+
+<div class="container">
+
+    <div class="row">
+        <img src="{{ asset('banner/BlueShop.png') }}" alt="" >
+    </div>
+
     <h1>Categoria</h1>
 
     <table class="table">
@@ -20,7 +27,9 @@
 
     <a href="{{ path('app_categoria_index') }}">back to list</a>
 
-    <a href="{{ path('app_categoria_edit', {'id': categorium.id}) }}">edit</a>
+    <a href="{{ path('app_categoria_edit', {'id': categorium.id}) }}" class="btn btn-warning">editar</a>
 
     {{ include('categoria/_delete_form.html.twig') }}
+
+</div>
 {% endblock %}
