--- a/project/app/templates/produto/show.html.twig
+++ b/project/app/templates/produto/show.html.twig
@@ -3,6 +3,13 @@
 {% block title %}Produto{% endblock %}
 
 {% block body %}
+
+<div class="container">
+
+    <div class="row">
+        <img src="{{ asset('banner/BlueShop.png') }}" alt="" >
+    </div>
+
     <h1>Produto</h1>
 
     <table class="table">
@@ -11,7 +18,7 @@
                 <th>Imagem</th>
                 <td>
                     {% if produto.foto is defined %}
-                        <img src="{{ asset('upload/produto/'~produto.foto.filename) }}" alt="">
+                        <img src="{{ asset('upload/produto/'~produto.foto.filename) }}" alt="" style="height: 337px; object-fit: cover;">
                     {%endif%}
                 </td>
             </tr>
@@ -36,7 +43,9 @@
 
     <a href="{{ path('app_produto_index') }}">back to list</a>
 
-    <a href="{{ path('app_produto_edit', {'id': produto.id}) }}">edit</a>
+    <a href="{{ path('app_produto_edit', {'id': produto.id}) }}" class="btn btn-warning">edit</a>
 
     {{ include('produto/_delete_form.html.twig') }}
+
+</div>
 {% endblock %}
