--- a/project/app/templates/registration/register.html.twig
+++ b/project/app/templates/registration/register.html.twig
@@ -3,7 +3,13 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+
+<div class="container">
+    <div class="row">
+        <img src="{{ asset('banner/BlueShop.png') }}" alt="" >
+    </div>
+
+    <h1>Cadastrar</h1>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
@@ -12,6 +18,7 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-primary">Cadastrar-se</button>
     {{ form_end(registrationForm) }}
+</div>
 {% endblock %}
